--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,11 +21,11 @@
   <link href="{{ asset('frontOffice/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
   <link href="{{ asset('frontOffice/css/main.css') }}" rel="stylesheet">
   <link href="{{ asset('frontOffice/css/custom.css') }}" rel="stylesheet">
-      
+  
     <!-- Main CSS File -->
 {% block stylesheet %}
   <link href="{{ asset('frontOffice/css/custom.css') }}" rel="stylesheet"> 
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="{{ asset('frontOffice/css/main.css') ~ '?v=' ~ random() }}" rel="stylesheet">
 {% endblock %}
 {% endblock %}
@@ -140,6 +140,7 @@
       </nav>
       {% if app.user %}
             <span class="me-3">Welcome, {{ app.user.userFname }} ({{ app.user.userRole }})</span>
+            <a class="btn-getstarted me-2" href="{{ path('app_profile') }}">Profile</a>
             <a class="btn-getstarted" href="{{ path('app_logout') }}">Logout</a>
         {% else %}
             <a class="btn-getstarted" href="{{ path('app_login') }}">Login</a>
@@ -338,14 +339,17 @@
 
   <!-- Vendor JS Files -->
   {% block javascript %}
+  <script src="{{ asset('frontOffice/vendor/purecounter/purecounter_vanilla.js') }}"></script>
   <script src="{{ asset('frontOffice/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
   <script src="{{ asset('frontOffice/vendor/php-email-form/validate.js') }}"></script>
   <script src="{{ asset('frontOffice/vendor/aos/aos.js') }}"></script>
   <script src="{{ asset('frontOffice/vendor/glightbox/js/glightbox.min.js') }}"></script>
   <script src="{{ asset('frontOffice/vendor/purecounter/purecounter_vanilla.js') }}f"></script>
   <script src="{{ asset('frontOffice/vendor/swiper/swiper-bundle.min.js') }}"></script>
-
-
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="{{ asset('frontOffice/js/main.js') }}"></script>
+  <!-- Add Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Main JS File -->
   <script src="{{ asset('frontOffice/js/main.js') }}"></script>
